--- a/src/main/resources/templates/reporting/reportingadminsettings.vm
+++ b/src/main/resources/templates/reporting/reportingadminsettings.vm
@@ -21,150 +21,156 @@
 $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reporting-admin-resources")
 
 <script type="text/javascript">
-	window.everit = window.everit || {};
-	everit.jttp = everit.jttp || {};
-	everit.jttp.reporting_admin = everit.jttp.reporting_admin || {};
+  window.everit = window.everit || {};
+  everit.jttp = everit.jttp || {};
+  everit.jttp.reporting_admin = everit.jttp.reporting_admin || {};
 
-	(function(jttp, jQuery) {
-		jttp.options = jQuery.extend( 
-			{},
-			jttp.options,
-			{}
-		);
-	})(everit.jttp.reporting_admin, AJS.$);
+  (function(jttp, jQuery) {
+    jttp.options = jQuery.extend( 
+      {},
+      jttp.options,
+      {}
+    );
+  })(everit.jttp.reporting_admin, AJS.$);
 </script>
 
-<div id="plugin_head" class="item-header">
-		<div class="logo-img">
-			#parse("templates/feedback/feedback_reporting_settings.vm")
-			<a href="http://www.everit.biz/" target="_blank">
-				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
-			</a>
-		</div>
-		<h1 class="item-summary">Timetracker Reporting Settings</h1>
+<header class="aui-page-header" style="padding: 20px;">
+  <div class="aui-page-header-inner">
+    <div class="aui-page-header-image">
+       <span class="aui-avatar aui-avatar-large">
+         <span class="aui-avatar-inner">
+           <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
+             <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:reporting-resources/E_logo.png" alt="Everit reporting logo">
+           </a>
+         </span>
+       </span>
+    </div>
+    <div class="aui-page-header-main">
+      <h1>Timetracker Reporting Settings</h1>
+    </div>
+  </div>
+</header>
+<div class="aui-page-panel">
+  <div class="aui-page-panel-inner aui-page-panel-content">
+    <form name="adminSettingForm"  method="post" action="JiraTimetrackerReportingSettingsWebAction.jspa"/>
+    #if(!$message.isEmpty())
+      <div id="error_message">
+        $i18n.getText($message)
+      </div>
+    #end
+      <table class="aui">
+        <tbody>
+          <tr style="border: 0px none;">
+            <td style="text-align: right; vertical-align: top;" width="15%">
+              <strong>$i18n.getText("jtrp.plugin.reporting.permission")</strong>
+            </td>
+            <td class="admin-settings-value-column">
+              <div id="groupSelect_container"
+                class="ajax_autocomplete atlassian-autocomplete aui-ss field-group"
+                style="margin-bottom: 35px">
+                <select multiple="multiple"
+                  name="reportingGroupSelect" 
+                  id="reportingGroupSelect" 
+                  data-popup-link-message="" 
+                  data-popup-width="620" 
+                  data-popup-height="500" 
+                  data-remove-on-un-select="true" 
+                  data-ajax-options.query="-" 
+                  data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
+                  data-ajax-options.data.query="-" 
+                  #if (${action.currentJQL})
+                  data-ajax-options.data.current_jql=${action.currentJQL}
+                  #end>
+                </select>
+                <script>
+                  var gp = new AJS.MultiSelect({
+                    element : AJS.$("#reportingGroupSelect"),
+                    itemAttrDisplayed : "label",
+                    showDropdownButton : false,
+                    ajaxOptions : {
+                      url : "${req.contextPath}/rest/api/2/groups/picker",
+                      query : true, // keep going back to the sever for each keystroke
+                      formatResponse : JIRA.GroupPickerUtil.formatResponse
+                    }
+                  });
+                  #if($reportingGroups.size() != 0)
+                  var list =[];
+                    #foreach ($reportingGroup in $reportingGroups)
+                  list.push("$reportingGroup");
+                    #end
+                  var groups = jQuery.map(list, function(value) {
+                    return { value: value, label: value };
+                  });
+                  gp._addMultipleItems(groups,true);
+                  #end
+                </script>
+              </div>
+              <div class="description">
+                $i18n.getText("jtrp.plugin.reporting.permission.desc")
+              </div>
+            </td>
+          </tr>
+          <tr style="border: 0px none;">
+            <td style="text-align: right; vertical-align: top;" width="15%">
+              <strong>$i18n.getText("jtrp.plugin.reporting.browse.user")</strong>
+            </td>
+            <td class="admin-settings-value-column">
+              <div id="groupSelect_browse_container"
+                class="ajax_autocomplete atlassian-autocomplete aui-ss field-group"
+                style="margin-bottom: 35px">
+                <select multiple="multiple"
+                  name="browseGroupSelect" 
+                  id="browseGroupSelect" 
+                  data-popup-link-message="" 
+                  data-popup-width="620" 
+                  data-popup-height="500" 
+                  data-remove-on-un-select="true" 
+                  data-ajax-options.query="-" 
+                  data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
+                  data-ajax-options.data.query="-" 
+                  #if (${action.currentJQL})
+                  data-ajax-options.data.current_jql=${action.currentJQL}
+                  #end>
+                </select>
+                <script>
+                  var gp = new AJS.MultiSelect({
+                    element : AJS.$("#browseGroupSelect"),
+                    itemAttrDisplayed : "label",
+                    showDropdownButton : false,
+                    ajaxOptions : {
+                      url : "${req.contextPath}/rest/api/2/groups/picker",
+                      query : true, // keep going back to the sever for each keystroke
+                      formatResponse : JIRA.GroupPickerUtil.formatResponse
+                    }
+                  });
+                  #if($browseGroups.size() != 0)
+                  var list =[];
+                    #foreach ($browseGroup in $browseGroups)
+                  list.push("$browseGroup");
+                    #end
+                  var groups = jQuery.map(list, function(value) {
+                    return { value: value, label: value };
+                  });
+                  gp._addMultipleItems(groups,true);
+                  #end
+                </script>
+              </div>
+              <div class="description">
+                $i18n.getText("jtrp.plugin.reporting.browse.user.desc")
+              </div>
+            </td>
+          </tr>
+          <tr class="buttons-container">
+            <td colspan="2">
+              <input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button aui-button-primary"/>
+              <input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingSettingsWebAction!default.jspa'" class="aui-button aui-button-primary"/>
+              <input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='/secure/ReportingWebAction!default.jspa'" class="aui-button aui-button-primary"/>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
+  </div>
 </div>
-<form name="adminSettingForm"  method="post" action="JiraTimetrackerReportingSettingsWebAction.jspa"/>	
-  	<div id="main-content" class="content rounded" >
-		<div class="inside-content">
-		#if(!$message.isEmpty())
-			  	<div id="error_message">
-			 			$i18n.getText($message)
-			  	</div>
-		  	#end
-			<table  class="summaty-table">
-				<tbody>
-					<tr>
-		              <td style="text-align: right; vertical-align: top;" width="15%">
-		                <strong>$i18n.getText("jtrp.plugin.reporting.permission")</strong>
-		              </td>
-		              <td class="admin-settings-value-column">
-		                <div id="groupSelect_container"
-		                  class="ajax_autocomplete atlassian-autocomplete aui-ss field-group"
-		                  style="margin-bottom: 35px">
-	                      <select multiple="multiple"
-		                    name="reportingGroupSelect" 
-		                    id="reportingGroupSelect" 
-		                    data-popup-link-message="" 
-		                    data-popup-width="620" 
-		                    data-popup-height="500" 
-		                    data-remove-on-un-select="true" 
-		                    data-ajax-options.query="-" 
-		                    data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
-		                    data-ajax-options.data.query="-" 
-		                    #if (${action.currentJQL})
-		                      data-ajax-options.data.current_jql=${action.currentJQL}
-		                    #end>
-		                  </select>
-		                  <script>
-		                    var gp = new AJS.MultiSelect({
-		                      element : AJS.$("#reportingGroupSelect"),
-		                      itemAttrDisplayed : "label",
-		                      showDropdownButton : false,
-		                      ajaxOptions : {
-		                        url : "${req.contextPath}/rest/api/2/groups/picker",
-		                        query : true, // keep going back to the sever for each keystroke
-		                        formatResponse : JIRA.GroupPickerUtil.formatResponse
-		                      }
-		                    });
-		                    #if($reportingGroups.size() != 0)
-		                      var list =[];
-		                      #foreach ($reportingGroup in $reportingGroups)
-		                        list.push("$reportingGroup");
-		                      #end
-		                      var groups = jQuery.map(list, function(value) {
-		                        return { value: value, label: value };
-		                      });
-		                      gp._addMultipleItems(groups,true);
-		                    #end
-		                  </script>
-		                 </div>
-		                <div class="description">
-		                  $i18n.getText("jtrp.plugin.reporting.permission.desc")
-		                </div>
-		              </td>
-		            </tr>
-		            <tr>
-		              <td style="text-align: right; vertical-align: top;" width="15%">
-		                <strong>$i18n.getText("jtrp.plugin.reporting.browse.user")</strong>
-		              </td>
-		              <td class="admin-settings-value-column">
-		                <div id="groupSelect_browse_container"
-		                  class="ajax_autocomplete atlassian-autocomplete aui-ss field-group"
-		                  style="margin-bottom: 35px">
-	                      <select multiple="multiple"
-		                    name="browseGroupSelect" 
-		                    id="browseGroupSelect" 
-		                    data-popup-link-message="" 
-		                    data-popup-width="620" 
-		                    data-popup-height="500" 
-		                    data-remove-on-un-select="true" 
-		                    data-ajax-options.query="-" 
-		                    data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
-		                    data-ajax-options.data.query="-" 
-		                    #if (${action.currentJQL})
-		                      data-ajax-options.data.current_jql=${action.currentJQL}
-		                    #end>
-		                  </select>
-		                  <script>
-		                    var gp = new AJS.MultiSelect({
-		                      element : AJS.$("#browseGroupSelect"),
-		                      itemAttrDisplayed : "label",
-		                      showDropdownButton : false,
-		                      ajaxOptions : {
-		                        url : "${req.contextPath}/rest/api/2/groups/picker",
-		                        query : true, // keep going back to the sever for each keystroke
-		                        formatResponse : JIRA.GroupPickerUtil.formatResponse
-		                      }
-		                    });
-		                    #if($browseGroups.size() != 0)
-		                      var list =[];
-		                      #foreach ($browseGroup in $browseGroups)
-		                        list.push("$browseGroup");
-		                      #end
-		                      var groups = jQuery.map(list, function(value) {
-		                        return { value: value, label: value };
-		                      });
-		                      gp._addMultipleItems(groups,true);
-		                    #end
-		                  </script>
-		                 </div>
-		                <div class="description">
-		                  $i18n.getText("jtrp.plugin.reporting.browse.user.desc")
-		                </div>
-		              </td>
-		            </tr>
-		            <tr class="buttons-container">
-						<td colspan="2">
-							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button"/>
-							<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingSettingsWebAction!default.jspa'" class="aui-button"/>
-							<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa'" class="aui-button"/>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			
-		</div>
-	</div>
-</form>
 </body>
 </html>
