add missing issue collector to settings page.

--- a/src/main/resources/templates/timetracker/settings.vm
+++ b/src/main/resources/templates/timetracker/settings.vm
@@ -122,6 +122,8 @@
       </form>
     </div>
   </div>
-     
+  
+  <!-- Issue Collector script -->
+  <script type="text/javascript" src="$issueCollectorSrc"></script>
 </body>
 </html>
